--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=5.3.2",
         "guzzle/guzzle": "~3.8",
-        "jms/serializer": "~0.15"
+        "jms/serializer": "0.15.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
