--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
   - 5.6
   - hhvm
 
 before_script:
   - composer self-update
-  - composer update --dev
+  - composer install --prefer-source --no-interaction --dev
 
-script:
-  - phpunit
+sudo: false
